--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p class="order-by-texto">
                 Ordenar Por:
             </p>
-            <select>
+            <select class="order-by-selector">
                 <option value="valor1">Precio</option>
                 <option value="valor2">Más Recientes</option>
                 <option value="valor3">Orden Alfavético</option>
@@ -46,7 +46,69 @@
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            <div class="card fuera-pagina">
+                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
+                <p class="card-texto">Model: Model 01</p>
+                <button class="card-btn">Ver más</button>
+            </div>
+            
+        </section>
+        <section class="paginas">
+            <div class="pagina-inicio"><p><<</p></div>
+            <div class="pagina"><p>1</p></div>
+            <div class="pagina"><p>2</p></div>
+            <div class="pagina"><p>3</p></div>
+            <div class="pagina-termino"><p>>></p></div>
         </section>
     </main>
     <footer class="footer">
