agrega layout tablet opcional del desafio

--- a/index.html
+++ b/index.html
@@ -46,62 +46,41 @@
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina1">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina2">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina2">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina2">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina2">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina2">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
+            <div class="card fuera-pagina2">
                 <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
                 <p class="card-texto">Model: Model 01</p>
                 <button class="card-btn">Ver más</button>
             </div>
-            <div class="card fuera-pagina">
-                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
-                <p class="card-texto">Model: Model 01</p>
-                <button class="card-btn">Ver más</button>
-            </div>
-            <div class="card fuera-pagina">
-                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
-                <p class="card-texto">Model: Model 01</p>
-                <button class="card-btn">Ver más</button>
-            </div>
-            <div class="card fuera-pagina">
-                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
-                <p class="card-texto">Model: Model 01</p>
-                <button class="card-btn">Ver más</button>
-            </div>
-            <div class="card fuera-pagina">
-                <img src="assets/imgs/electric-car.png" alt="model-1" class="imagen-auto">
-                <p class="card-texto">Model: Model 01</p>
-                <button class="card-btn">Ver más</button>
-            </div>
-            
         </section>
         <section class="paginas">
             <div class="pagina-inicio"><p><<</p></div>
